--- a/.github/workflows/build-nmstore.yml
+++ b/.github/workflows/build-nmstore.yml
@@ -13,7 +13,6 @@ env:
   INTERNAL: ${{ github.event_name != 'schedule' }}
   RELEASE: ${{ github.event_name == 'push' && github.ref == 'refs/heads/release/[0-9]+.[0-9]+' }}
   DEV: ${{ github.event_name == 'pull_request' && github.event.action == 'opened' }}
-  NIGHTLY: ${{ github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main) }}
 
 jobs:
   build_and_push:
@@ -35,9 +34,8 @@ jobs:
         id: build_wheel
         uses: neuralmagic/nmstore/actions/pypi@pypi-test
         with:
-          nightly: $NIGHTLY
           dev: $DEV
-          releae: $RELEASE
+          release: $RELEASE
           runs-on: ubuntu-latest
       - name: Push to s3 bucket
         uses: neuralmagic/nmstore/actions/s3@pypi-test
