--- a/.github/workflows/build-nmstore.yml
+++ b/.github/workflows/build-nmstore.yml
@@ -33,16 +33,17 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_WEBIDENTITY_FOR_GITHUB_ACTIONS }}
           aws-region: us-east-1
-      - name: Env
-        run:  |
-              echo $DEV
-              echo ${{ github.event.action }}
+      - name: Set additional ENV
+        if: $DEV
+        env:
+          NAME: ${{ github.event.number }} 
       - name: Build PyPi Wheel
         id: build_wheel
         uses: neuralmagic/nmstore/actions/pypi@pypi-test
         with:
           dev: $DEV
           release: $RELEASE
+          name: $NAME
       - name: Push to s3 bucket
         uses: neuralmagic/nmstore/actions/s3@pypi-test
         with:
