--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -22,7 +22,7 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     outputs:
-      filename: ${{ steps.build_wheel.outputs.filename }}
+      built_wheel: ${{ steps.push_wheel.outputs.wheel }}
     permissions:
       id-token: write
       contents: read
@@ -36,13 +36,38 @@ jobs:
           aws-region: us-east-1 
       - name: Build PyPi Wheel
         id: build_wheel
+        outputs:
+          filename: ${{ steps.build_wheel.outputs.filename }}
         uses: neuralmagic/nmstore/actions/pypi@pypi-test
         with:
           dev: $DEV
           release: $RELEASE
           name: $NAME
       - name: Push to s3 bucket
+        id: push_wheeel
         uses: neuralmagic/nmstore/actions/s3_push@pypi-test
         with:
           filename: dist/*.whl
           internal: $INTERNAL
+  pull_wheel:
+    runs-on: ubuntu-latest  
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - name: Login to s3
+          uses: aws-actions/configure-aws-credentials@v2
+          with:
+            role-to-assume: ${{ secrets.AWS_WEBIDENTITY_FOR_GITHUB_ACTIONS }}
+            aws-region: us-east-1
+      - name: Set vars
+        run: |
+             echo ${{ jobs.build_and_push.outputs.built_wheel }}
+             mkdir dist_s3
+      - name: Pull from s3
+          uses: neuralmagic/nmstore/actions/s3_pull@pypi-test
+          with:
+            filename: ${{ jobs.build_and_push.outputs.built_wheel }}
+            internal: $INTERNAL
+            dst: dist_s3
+    
