--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -22,7 +22,7 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     outputs:
-      built_wheel: ${{ steps.push_wheel.outputs.wheel }}
+      built_wheel: ${{ steps.push-wheel.outputs.wheel }}
     permissions:
       id-token: write
       contents: read
@@ -35,14 +35,14 @@ jobs:
           role-to-assume: ${{ secrets.AWS_WEBIDENTITY_FOR_GITHUB_ACTIONS }}
           aws-region: us-east-1 
       - name: Build PyPi Wheel
-        id: build_wheel
+        id: build-wheel
         uses: neuralmagic/nmstore/actions/pypi@pypi-test
         with:
           dev: $DEV
           release: $RELEASE
           name: $NAME
       - name: Push to s3 bucket
-        id: push_wheeel
+        id: push-wheeel
         uses: neuralmagic/nmstore/actions/s3_push@pypi-test
         with:
           filename: dist/*.whl
