--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -47,6 +47,10 @@ jobs:
         with:
           filename: dist/*.whl
           internal: $INTERNAL
+      - name: Temp Step
+        run: | 
+             echo ${{ steps.push-wheel.outputs.wheel }} 
+
   pull_wheel:
     needs: build_and_push
     runs-on: ubuntu-latest  
@@ -66,7 +70,7 @@ jobs:
       - name: Pull from s3
         uses: neuralmagic/nmstore/actions/s3_pull@pypi-test
         with:
-          filename: ${{ needs.build_and_push.outputs.built_wheel }}
+          filename: ${{needs.build_and_push.outputs.built_wheel}}
           internal: $INTERNAL
           dst: dist_s3
     
