--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -71,7 +71,7 @@ jobs:
           internal: $INTERNAL
           dst: dist_s3
       - name: Test Wheel 
-        if: $DEV
+        if: ${{ env.DEV == 'true' }}
         run:
             pip install dist_s3/*.whl
             make test
