--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -70,9 +70,17 @@ jobs:
           filename: ${{ needs.build_and_push.outputs.wheel }}
           internal: $INTERNAL
           dst: dist_s3
+      - name: Install Wheel
+        run:
+          pip install dist_s3/*.whl
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Test Wheel 
         if: ${{ env.DEV == 'true' }}
         run:
-            pip install dist_s3/*.whl
             make test
+      - name: Test Wheel, Extensive
+        if: ${{ env.DEV != 'true' }}
+        run:
+            make test TARGETS=full
     
