--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -71,16 +71,16 @@ jobs:
           internal: $INTERNAL
           dst: dist_s3
       - name: Install Wheel
-        run:
-          pip install dist_s3/*.whl
-          pip install pytest
+        run: |
+             pip install dist_s3/*.whl
+             pip install pytest
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Test Wheel 
         if: ${{ env.DEV == 'true' }}
-        run:
-            pip list
-            make test
+        run: | 
+             pip list
+             make test
       - name: Test Wheel, Extensive
         if: ${{ env.DEV != 'true' }}
         run:
