--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -79,6 +79,7 @@ jobs:
         if: ${{ env.DEV == 'true' }}
         run: | 
              pip install .[dev]
+             pip uninstall sparsezoo-nightly
              pip list
              make test
       - name: Test Wheel, Extensive
