--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -73,13 +73,13 @@ jobs:
       - name: Install Wheel
         run: |
              pip install dist_s3/*.whl
+             pip install pytest
+             pip install matplotlib
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Test Wheel 
         if: ${{ env.DEV == 'true' }}
         run: | 
-             pip install .[dev]
-             pip uninstall sparsezoo-nightly
              pip list
              make test
       - name: Test Wheel, Extensive
