--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches:
       - main
-      - 'release/[0-9]+.[0-9]+' 
+      - 'release/*' 
   schedule:
     - cron: '0 0 * * *'
 
@@ -36,7 +36,7 @@ jobs:
           aws-region: us-east-1 
       - name: Build PyPi Wheel
         id: build-wheel
-        uses: neuralmagic/nmstore/actions/pypi@pypi-test
+        uses: neuralmagic/nmstore/actions/pypi_build@pypi-test
         with:
           dev: $DEV
           release: $RELEASE
@@ -60,9 +60,8 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_WEBIDENTITY_FOR_GITHUB_ACTIONS }}
           aws-region: us-east-1
-      - name: Set vars
+      - name: Make directory for wheel
         run: |
-             echo ${{ needs.build_and_push.outputs.wheel }}
              mkdir dist_s3
       - name: Pull from s3
         uses: neuralmagic/nmstore/actions/s3_pull@pypi-test
@@ -77,13 +76,7 @@ jobs:
              pip install matplotlib
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Test Wheel 
-        if: ${{ env.DEV == 'true' }}
+      - name: Test Wheel on Base Tests
         run: | 
-             pip list
              make test
-      - name: Test Wheel, Extensive
-        if: ${{ env.DEV != 'true' }}
-        run:
-            make test TARGETS=full
     
