update unit and nightly tests

--- a/.github/workflows/test-unit.yaml
+++ b/.github/workflows/test-unit.yaml
@@ -1,4 +1,4 @@
-name: Basic Test Checks
+name: Basic Test Checks - Unit and Smoke
 on:
   push:
     branches:
@@ -19,7 +19,7 @@ jobs:
           ((git diff --name-only origin/main HEAD | grep -E "[src|tests]/sparsezoo|setup.py")
           || (echo $GITHUB_REF | grep -E "refs/heads/[release/|main]"))
           && echo "::set-output name=output::1" || echo "::set-output name=output::0"
-  python-tests:
+  unit-tests:
     runs-on: ubuntu-latest
     env:
       SPARSEZOO_TEST_MODE: "true"
@@ -32,3 +32,18 @@ jobs:
         run: pip3 install .[dev]
       - name: "🔬 Running tests"
         run: make test
+    smoke-tests:
+      runs-on: ubuntu-latest
+      env:
+        SPARSEZOO_TEST_MODE: "true"
+        NM_DISABLE_ANALYTICS: "true"
+      needs: test-setup
+      if: ${{needs.test-setup.outputs.python-diff == 1}}
+      steps:
+        - uses: actions/checkout@v2
+        - name: "⚙️ Install dependencies"
+          run: pip3 install .[dev]
+        - name: "🔬 Running tests"
+          run: make test
+        - name: Run CLI smoke tests
+          run: PYTEST_ARGS="-m smoke" make test
