--- a/.github/workflows/test-nightly.yml
+++ b/.github/workflows/test-nightly.yml
@@ -15,3 +15,16 @@ jobs:
         run: pip3 install .[dev]
       - name: "🔬 Running tests"
         run: make test TARGETS=full
+  smoke-tests:
+    runs-on: ubuntu-latest
+    env:
+      SPARSEZOO_TEST_MODE: "true"
+      NM_DISABLE_ANALYTICS: "true"
+    steps:
+      - uses: actions/checkout@v2
+      - name: "⚙️ Install dependencies"
+        run: pip3 install .[dev]
+      - name: "🔬 Running tests"
+        run: make test
+      - name: Run CLI smoke tests
+        run: PYTEST_ARGS="-m smoke" make test
