--- a/.github/workflows/test-unit.yaml
+++ b/.github/workflows/test-unit.yaml
@@ -4,6 +4,9 @@ on:
     branches:
       - '*'
 
+concurrency:
+  cancel-in-progress: true
+
 jobs:
   test-setup:
     runs-on: ubuntu-latest
@@ -19,7 +22,7 @@ jobs:
           ((git diff --name-only origin/main HEAD | grep -E "[src|tests]/sparsezoo|setup.py")
           || (echo $GITHUB_REF | grep -E "refs/heads/[release/|main]"))
           && echo "::set-output name=output::1" || echo "::set-output name=output::0"
-  unit-tests:
+  sanity-tests:
     runs-on: ubuntu-latest
     env:
       SPARSEZOO_TEST_MODE: "true"
