--- a/.github/workflows/test-nightly.yml
+++ b/.github/workflows/test-nightly.yml
@@ -4,7 +4,7 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  extensive-python-tests:
+  regression-tests:
     runs-on: ubuntu-latest
     env:
       SPARSEZOO_TEST_MODE: "true"
