--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -1,9 +1,10 @@
 name: Build PyPi Wheel
 on:
   pull_request:
+    types: [opened, synchronize, reopened]
     branches:
       - main
-      - 'release/*'
+      - 'release/**'
   push:
     branches:
       - main
@@ -23,8 +24,8 @@ concurrency:
 # missing release tag workflow/needs to be added in
 env:
   INTERNAL: ${{ github.event_name != 'schedule' }}
-  RELEASE: ${{ github.ref == 'refs/heads/release/[0-9]+.[0-9]+' && (github.event.action == 'opened' || github.event.action == 'synchronize')}}
-  DEV: ${{ github.ref == 'main' && (github.event.action == 'opened' || github.event.action == 'synchronize')}}
+  RELEASE: ${{ github.base_ref == 'refs/heads/release/[0-9]+.[0-9]+' && github.event_name == 'pull_request'}}
+  DEV: ${{ github.base_ref == 'main' && github.event_name == 'pull_request'}}
   NAME: ${{ github.event.number }} 
 
 jobs:
