--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -45,14 +45,14 @@ jobs:
           aws-region: us-east-1 
       - name: Build PyPi Wheel
         id: build-wheel
-        uses: neuralmagic/nm-actions/actions/pypi_build
+        uses: neuralmagic/nm-actions/actions/pypi_build@main
         with:
           dev: $DEV
           release: $RELEASE
           name: $NAME
       - name: Push to s3 bucket
         id: push-wheel
-        uses: neuralmagic/nm-actions/actions/s3_push
+        uses: neuralmagic/nm-actions/actions/s3_push@main
         with:
           filename: dist/*.whl
           internal: $INTERNAL
