--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - 'release/*'
-      - 'relbuild'
 
   workflow_dispatch:
     inputs:
@@ -12,7 +11,7 @@ on:
         description: "git tag, commit or branch name for the release"
         type: string
         required: true
-        default: 'relbuild'
+        default: 'release/1.8'
 
 jobs:
   build-release-wheel:
